# INLA_DIST

./: .gitignore  Doxyfile  LICENSE  README.md  main.cc  makefile  read_result_logs.R  read_write_functions.cpp  regression_model.cpp
BFGS/: CMakeLists.txt  FD_Hessian.cpp  PardisoSolver.cpp  PardisoSolver.h  PostTheta.cpp  PostTheta.h  RGFSolver.cpp  RGFSolver.h  RGFSolver_dummy.cpp  RGFSolver_dummy.h  Solver.h  call_INLA.cpp  example  example.cpp  makefile  makefile_RGFdummy  omp_run_script.sh  run_script.sh  solver.cpp  solver_cholmod.cpp  solver_pardiso.cpp  test_file.cpp  test_omp.cpp  theta_function.cpp  theta_function_test.cpp
BFGS/RGF/: Makefile  intermed_fct_RGF.C  main_w_subfct.C  make.inc
BTA/: BTA.H  Blas.H  CWC_utility.cu  Makefile  README.md  RGF.H  Types.H  alex_run_script.sh  alex_run_script_fullCSC.sh  main.C  mainEigen.C  main_fullCSC.C  make.inc  make_kaust.inc  makefile  run_script.sh  setup.sh  setup_kaust.sh
INLA_CPUonly/: BTASolver_dummy.cpp  BTASolver_dummy.h  PardisoSolver.cpp  PardisoSolver.h  PardisoSolver_dummy.h  PostTheta.cpp  PostTheta.h  PostTheta_MPI.cpp  RGFSolver_dummy.h  call_INLA  call_INLA.cpp  call_INLA_approxQst.cpp  daint_PARD_run_script.sh  fritz_PARD_run_script.sh  helper_functions.h  makefile  makefile_RGFdummy  makefile_normal  run_script.sh  setup.sh
INLA_main/: BTASolver.cpp  BTASolver.h  EigenCholSolver.cpp  EigenCholSolver.h  PardisoSolver.h  PostTheta.cpp  PostTheta.h  README.md  RGFSolver.cpp  RGFSolver.h  alex_run_script.sh  call_INLA  call_INLA.cpp  makefile
INLA_predict/: BTASolver.cpp  BTASolver.h  PardisoSolver.cpp  PostTheta.cpp  PostTheta.h  RGFSolver.cpp  RGFSolver.h  Solver.h  call_INLA.cpp  helper_functions.h  makefile  run_script.sh
MPI_BFGS/: Doxyfile  Model.cpp  Model.h  PardisoSolver.cpp  PostTheta.cpp  PostTheta.h  RGFSolver.cpp  RGFSolver.h  Solver.h  broken_CMakeLists.txt  call_INLA  call_INLA.cpp  ibex_RGF_run_script.sh  makefile  makefile_ibex  run_script.sh
MPI_all_BFGS/: PardisoSolver.cpp  PardisoSolver.h  PardisoSolver_dummy.cpp  PostTheta.cpp  PostTheta.h  PostTheta_MPI.cpp  PostTheta_MPI.h  PostTheta_nestedOpenMP.cpp  RGFSolver.cpp  RGFSolver.h  RGFSolver_backup.cpp  RGFSolver_backup.h  RGFSolver_dummy.cpp  RGFSolver_dummy.h  RGFSolver_newClass.h  Solver.h  alex_batch_run_script.sh  alex_nsys_run_script.sh  call_INLA  call_INLA.cpp  call_INLA_MPI.cpp  daint_PARD_run_script.sh  fritz_PARD_run_script.sh  generate_regression_data.cpp  ibex_PARD_run_script.sh  ibex_RGF_run_script.sh  makefile  makefile_RGFdummy  makefile_normal  mixed_call_INLA.cpp  orig_makefile  run_script.sh  solver_cholmod.h  temp_run_script.sh
RGF/: Blas.H  CWC_utility.H  CWC_utility.cu  Makefile  README.md  RGF.H  RGF_backup.H  RGF_newClass.H  RGF_output.txt  alex_run_script.sh  generate_testMat_selInv.cpp  helper_functions.h  main  main.C  mainEigen.C  main_logDetOnly.C  make.inc  run_script.sh  setup_ics.sh
Rscripts/: README.md  fun_write_file.R  generate_synth_dataset.R  parametrisation_hyperparam.R  spatial_temporal_model_matrices.R
develop/: BTASolver.cpp  BTASolver.h  EigenSolver.cpp  EigenSolver.h  Hyperparameters.cpp  Hyperparameters.h  PardisoSolver.cpp  PardisoSolver.h  PostTheta.cpp  PostTheta.h  PostTheta_MPI.cpp  PostTheta_MPI.h  (+14 more)
(+435 files in other folders)
